remove mixins wrapping placeholders; move %u-fixed-width-container into separate file

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -19,7 +19,6 @@
   @include vf-b-reset;
   // Base
   @include vf-base-background;
-  @include vf-b-placeholders;
   @include vf-b-typography;
   @include vf-b-blockquotes;
   @include vf-b-box-sizing;
